--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "animejs": "^3.2.1",
     "core-js": "^3.8.3",
     "kute.js": "^2.2.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
